# background-pingu-v2

./: .gitignore  README.md  pyproject.toml  run-cli.py  run.py
BackgroundPingu/: config.py  pyproject.toml  requirements.txt  run.py
BackgroundPingu/bot/: main.py  ocr.py
BackgroundPingu/bot/cogs/: core.py  modcheck.py  tips.py
BackgroundPingu/bot/ui/: views.py
BackgroundPingu/core/: issues.py  parser.py
BackgroundPingu/data/: issues.json  mods_getter.py
loghelper/: config.py  data_loader.py  parser.py  pyproject.toml  setup.py
loghelper/data/: boatEyeSensitivitiesv1_16.txt  issues.json  issues_sorter.py  mods_getter.py
loghelper/issues/: builder.py  checker.py
web/: app.py  pyproject.toml  requirements.txt
web-sq/: app.py  pyproject.toml
web-sq/templates/: _result.html  index.html
web/templates/: _result.html  index.html
