[project]
name = "loghelper"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "cached-property==1.5.2",
  "requests==2.30.0",
  "packaging==23.1",
  "semver==3.0.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "loghelper",
  "loghelper.data",
  "loghelper.issues",
]

[tool.setuptools.package-dir]
loghelper = "."
"loghelper.data" = "data"
"loghelper.issues" = "issues"

[tool.setuptools.package-data]
"loghelper.data" = ["*.json", "*.txt"]
